[package]
name = "github-web-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
tokio = { version = "1.38", features = ["full"] }
serde_json = "1"
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features=["env-filter", "json"]}
dotenv = "0.15"

